--- a/snapshots/snapshots.conf
+++ b/snapshots/snapshots.conf
@@ -1,37 +1,72 @@
+################################################################################
+# Options for taking snapshots
+################################################################################
 # Snapshot source device
 # Can be any valid device identifier accepted by mount(8)
-SRC_SNAPSHOTS_DEV='UUID=81742141-96bb-4082-a28a-ad15edd11db4'
+TAKE_SRC_SNAPSHOTS_DEV='UUID=81742141-96bb-4082-a28a-ad15edd11db4'
 
 # Snapshot source mountpoint
-SRC_SNAPSHOTS='/root/btrfs_snapshots'
+TAKE_SRC_SNAPSHOTS='/root/btrfs_snapshots'
 
 # Snapshot source mount options
-SRC_MOUNT_OPTS=(defaults noatime compress-force subvol=/snapshots)
+TAKE_SRC_MOUNT_OPTS=(defaults noatime compress-force subvol=/snapshots)
 
 # Snapshot destination device
 # Can be any valid device identifier accepted by mount(8)
-DEST_SNAPSHOTS_DEV='UUID=320fdb19-2d95-4452-aa72-fcd5c39cb390'
+TAKE_DEST_SNAPSHOTS_DEV='UUID=320fdb19-2d95-4452-aa72-fcd5c39cb390'
 
 # Snapshot destination mountpoint
-DEST_SNAPSHOTS='/root/sd_snapshots'
+TAKE_DEST_SNAPSHOTS='/root/sd_snapshots'
 
 # Snapshot destination mount options
-DEST_MOUNT_OPTS=(defaults noatime compress-force subvol=/snapshots)
+TAKE_DEST_MOUNT_OPTS=(defaults noatime compress-force subvol=/snapshots)
 
 # Map of subvolumes to transfer
 # [subvolume mountpoint] -> [subvolume name]
-SUBVOLUMES=(['/']='root' ['/root']='root_home' ['/home']='home')
+TAKE_SUBVOLUMES=(['/']='root' ['/root']='root_home' ['/home']='home')
 
 # Cutoff point for "recent" snapshots. If the newest snapshot is older than
 # this, create a new snapshot.
 # Must be a valid string for use in --date=STRING
 # See date(1)
-DESIRED_PREV_CUTOFF='last saturday'
+TAKE_DESIRED_PREV_CUTOFF='last saturday'
 
 # Cutoff point for "expired" snapshots. Snapshots older than this will be
 # deleted from thr source.
 # Must be a valid string for use in --date=STRING
 # See date(1)
-EXPIRED_CUTOFF='5 weeks ago'
+TAKE_EXPIRED_CUTOFF='5 weeks ago'
+
+################################################################################
+# Options for transfering snapshots
+################################################################################
+# Snapshot source device
+# Can be any valid device identifier accepted by mount(8)
+XFER_SRC_SNAPSHOTS_DEV='UUID=320fdb19-2d95-4452-aa72-fcd5c39cb390'
+
+# Snapshot source mountpoint
+XFER_SRC_SNAPSHOTS='/root/sd_snapshots'
+
+# Snapshot source mount options
+XFER_SRC_MOUNT_OPTS=(defaults noatime compress-force subvol=/snapshots)
+
+# Snapshot destination device is automatically defined by udev
+# Snapshot destination mountpoint
+XFER_DEST_SNAPSHOTS='/root/snapshot_crypt/mnt'
+
+# Snapshot destination mount options
+XFER_DEST_MOUNT_OPTS=(defaults ssd noatime compress-force subvol=/snapshots)
+
+# Path to LUKS key-file
+XFER_LUKS_KEYFILE='/root/snapshot_crypt/ss_crypt.keyfile.txt'
+
+# Map of subvolumes to transfer
+# [subvolume mountpoint] -> [subvolume name]
+XFER_SUBVOLUMES=(['/']='root' ['/root']='root_home' ['/home']='home')
+
+# Cutoff point for snapshots (ie, oldest snapshot to keep on the source)
+# Must be a valid string for use in --date=STRING
+# See date(1)
+XFER_OLDEST_CUTOFF='3 months ago'
 
 # vim: filetype=bash:
