--- a/snapshots/snapshots.conf
+++ b/snapshots/snapshots.conf
@@ -9,7 +9,7 @@ TAKE_SRC_SNAPSHOTS_DEV='UUID=81742141-96bb-4082-a28a-ad15edd11db4'
 TAKE_SRC_SNAPSHOTS='/root/btrfs_snapshots'
 
 # Snapshot source mount options
-TAKE_SRC_MOUNT_OPTS=(defaults noatime compress-force subvol=/snapshots)
+TAKE_SRC_MOUNT_OPTS=('defaults' 'noatime' 'compress-force' 'subvol=/snapshots')
 
 # Snapshot destination device
 # Can be any valid device identifier accepted by mount(8)
@@ -19,7 +19,7 @@ TAKE_DEST_SNAPSHOTS_DEV='UUID=320fdb19-2d95-4452-aa72-fcd5c39cb390'
 TAKE_DEST_SNAPSHOTS='/root/sd_snapshots'
 
 # Snapshot destination mount options
-TAKE_DEST_MOUNT_OPTS=(defaults noatime compress-force subvol=/snapshots)
+TAKE_DEST_MOUNT_OPTS=('defaults' 'noatime' 'compress-force' 'subvol=/snapshots')
 
 # Map of subvolumes to transfer
 # [subvolume mountpoint] -> [subvolume name]
@@ -48,14 +48,14 @@ XFER_SRC_SNAPSHOTS_DEV='UUID=320fdb19-2d95-4452-aa72-fcd5c39cb390'
 XFER_SRC_SNAPSHOTS='/root/sd_snapshots'
 
 # Snapshot source mount options
-XFER_SRC_MOUNT_OPTS=(defaults noatime compress-force subvol=/snapshots)
+XFER_SRC_MOUNT_OPTS=('defaults' 'noatime' 'compress-force' 'subvol=/snapshots')
 
 # Snapshot destination device is automatically defined by udev
 # Snapshot destination mountpoint
 XFER_DEST_SNAPSHOTS='/root/snapshot_crypt/mnt'
 
 # Snapshot destination mount options
-XFER_DEST_MOUNT_OPTS=(defaults ssd noatime compress-force subvol=/snapshots)
+XFER_DEST_MOUNT_OPTS=('defaults' 'ssd' 'noatime' 'compress-force' 'subvol=/snapshots')
 
 # Path to LUKS key-file
 XFER_LUKS_KEYFILE='/root/snapshot_crypt/ss_crypt.keyfile.txt'
