Add configure option for udev rules directory
`--with-udevdir=DIR`
Default is `$(sysconfdir)/udev/rules.d`.

--- a/snapshots/Makefile.am
+++ b/snapshots/Makefile.am
@@ -1,7 +1,5 @@
-configdir = $(sysconfdir)/misc-utils
-udevdir = $(sysconfdir)/udev/rules.d
-
 dist_bin_SCRIPTS = snapshots.sh
+# Automake creates configdir/udevdir variables from AC_SUBST in configure.ac
 dist_config_DATA = snapshots.conf
 dist_udev_DATA = 99-ss_crypt.rules
 
