--- a/snapshots/snapshots.conf
+++ b/snapshots/snapshots.conf
@@ -69,4 +69,20 @@ XFER_SUBVOLUMES=(['/']='root' ['/root']='root_home' ['/home']='home')
 # See date(1)
 XFER_OLDEST_CUTOFF='3 months ago'
 
+################################################################################
+# Options for snapshot cron job
+################################################################################
+# The example runs every three hours at the bottom of the hour
+# Blank field is the same as a wildcard field
+# Minutes field (0 - 59)
+CRON_MINUTES='30'
+# Hours field (0 - 23)
+CRON_HOURS='0,3,6,9,12,15,18,21'
+# Days of month field (1 - 31)
+CRON_DAYS_MONTH=''
+# Months field (1 - 12) or jan,feb,...
+CRON_MONTHS=''
+# Days of week field (0 - 6/7) (Sunday 0/7) or mon,tue,wed,thu,fri,sat,sun
+CRON_DAYS_WEEK=''
+
 # vim: filetype=bash:
